chore: fix up paths

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       }
       
     </style>
-    <link href="/dist/index.css" rel="stylesheet" />
+    <link href="./css/index.css" rel="stylesheet" />
   </head>
   <body
     class="leading-normal tracking-normal gradient"
