--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
                       class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white"
                     >
                       <i
-                        class="text-green-500 dark:text-green-300 text-2xl fa-regular fa-circle-check"
+                        class="text-green-500 dark:text-green-300 text-2xl fa-regular fa-circle-check pr-2"
                       ></i>
                     </div>
                   </div>
@@ -176,7 +176,7 @@
                       class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white"
                     >
                       <i
-                        class="text-green-500 dark:text-green-300 text-2xl fa-regular fa-circle-check"
+                        class="text-green-500 dark:text-green-300 text-2xl fa-regular fa-circle-check pr-2"
                       ></i>
                     </div>
                   </div>
@@ -200,7 +200,7 @@
                       class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white"
                     >
                       <i
-                        class="text-green-500 dark:text-green-300 text-2xl fa-regular fa-circle-check"
+                        class="text-green-500 dark:text-green-300 text-2xl fa-regular fa-circle-check pr-2"
                       ></i>
                     </div>
                   </div>
@@ -224,7 +224,7 @@
                       class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white"
                     >
                       <i
-                        class="text-green-500 dark:text-green-300 text-2xl fa-regular fa-circle-check"
+                        class="text-green-500 dark:text-green-300 text-2xl fa-regular fa-circle-check pr-2"
                       ></i>
                     </div>
                   </div>
