--- a/src/index.html
+++ b/src/index.html
@@ -275,7 +275,7 @@
       </svg>
     </div>
 
-    <section class="bg-white dark:bg-gray-800 py-8">
+    <section class="bg-white dark:bg-gray-800 py-8 pr-6 pl-6">
       <div class="container max-w-5xl mx-auto m-8">
         <h2
           class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800 dark:text-white"
