--- a/src/index.html
+++ b/src/index.html
@@ -288,32 +288,54 @@
           ></div>
         </div>
 
-        <div class="mt-10">
-          <h3 class="text-3xl text-gray-800 dark:text-white font-bold leading-none mb-3">
-            September 9, 2023: URL vulnerability
-          </h3>
-          <p class="text-gray-600 dark:text-white mb-8">
-            By using a URL that was specially crafted, a third party could have
-            redirected people who were accessing GC Notify to a site that is not
-            GC Notify. We discovered this security issue on September 9, 2023
-            and we fixed it on September 10, 2023.
-            <br /><br />
-            You were not impacted if you accessed the URL using the address bar
-            or bookmarks. For details about the issue, read the security
-            advisory on GitHub.
-          </p>
+        <div class="text-center mt-10" id="history-loading">
+          <!-- <i class="text-5xl fa-solid fa-spinner fa-spin place-content-center"></i> -->
+          <div class="p-4 w-full">
+            <div class="animate-pulse flex space-x-4">
+              <div class="flex-1 space-y-6 py-1">
+                <div class="h-8 max-w-lg bg-slate-200 rounded"></div>
+                <div class="space-y-3">
+                  <div class="grid grid-cols-3 gap-4">
+                    <div class="h-2 bg-slate-200 rounded col-span-2"></div>
+                    <div class="h-2 bg-slate-200 rounded col-span-1"></div>
+                  </div>
+                  <div class="h-2 bg-slate-200 rounded"></div>
+                </div>
+                <div class="space-y-3">
+                  <div class="grid grid-cols-3 gap-4">
+                    <div class="h-2 bg-slate-200 rounded col-span-2"></div>
+                    <div class="h-2 bg-slate-200 rounded col-span-1"></div>
+                  </div>
+                  <div class="h-2 bg-slate-200 rounded"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="p-4 w-full">
+            <div class="animate-pulse flex space-x-4">
+              <div class="flex-1 space-y-6 py-1">
+                <div class="h-8 max-w-lg bg-slate-200 rounded"></div>
+                <div class="space-y-3">
+                  <div class="grid grid-cols-3 gap-4">
+                    <div class="h-2 bg-slate-200 rounded col-span-2"></div>
+                    <div class="h-2 bg-slate-200 rounded col-span-1"></div>
+                  </div>
+                  <div class="h-2 bg-slate-200 rounded"></div>
+                </div>
+                <div class="space-y-3">
+                  <div class="grid grid-cols-3 gap-4">
+                    <div class="h-2 bg-slate-200 rounded col-span-2"></div>
+                    <div class="h-2 bg-slate-200 rounded col-span-1"></div>
+                  </div>
+                  <div class="h-2 bg-slate-200 rounded"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="mt-10">
-          <h3 class="text-3xl text-gray-800 dark:text-white font-bold leading-none mb-3">
-            August 2, 2023: Email degradation
-          </h3>
-          <p class="text-gray-600 dark:text-white mb-8">
-            <em>Update: This incident is now resolved.</em>
-            <br /><br />
-            Our system is experiencing some degradation for emails at the moment
-            and our team is investigating.
-          </p>
+        <div id="history" class="  dark:text-white">
+
         </div>
       </div>
     </section>
@@ -473,6 +495,31 @@
       }
       return false;
     }
+  </script>
+
+  <script>
+    (async function() {
+      async function getIncidentHistory() {
+          const response = await fetch("https://articles.alpha.canada.ca/notification-gc-notify/wp-json/wp/v2/pages?slug=system-status&lang=en");
+          const movies = await response.json();
+          incident_html = movies[0].content.rendered;
+
+          // fix up h3's to use tailwind
+          incident_html = incident_html.replace(/wp-block-heading/g, 'text-3xl text-gray-800 dark:text-white font-bold leading-none mb-3 mt-10');
+        
+          // remove h2
+          incident_html = incident_html.replace(/<h2.*\/h2>/g, '');
+          console.log(incident_html)
+
+          document.getElementById("history-loading").hidden = true;
+          document.getElementById("history").innerHTML = incident_html;
+      }
+
+      await getIncidentHistory();
+
+      var componentStatus = `
+      `;
+    })();
   </script>
   </body>
 </html>
