--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
                 <li class="py-3 sm:py-4">
                   <div class="flex items-start">
                     <i
-                      class="text-xl mt-1 mr-4 fa-solid fa-desktop text-gray-900 dark:text-white" 
+                      class="text-xl mt-1 mr-4 fa-solid fa-comment text-gray-900 dark:text-white" 
                     ></i>
                     <div class="flex-1 min-w-0 ms-4">
                       <p class="text-gray-900 truncate dark:text-white">
