--- a/src/index.html
+++ b/src/index.html
@@ -195,29 +195,29 @@
             <div class="animate-pulse flex space-x-4">
               <div class="flex-1 space-y-6 py-1">
                 <div
-                  class="h-8 max-w-lg bg-slate-200 dark:bg-slate-500 rounded"
+                  class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"
                 ></div>
                 <div class="space-y-3">
                   <div class="grid grid-cols-3 gap-4">
                     <div
-                      class="h-2 bg-slate-200 dark:bg-slate-500 rounded col-span-2"
+                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
                     ></div>
                     <div
-                      class="h-2 bg-slate-200 dark:bg-slate-500 rounded col-span-1"
+                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
                     ></div>
                   </div>
-                  <div class="h-2 bg-slate-200 dark:bg-slate-500 rounded"></div>
+                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
                 </div>
                 <div class="space-y-3">
                   <div class="grid grid-cols-3 gap-4">
                     <div
-                      class="h-2 bg-slate-200 dark:bg-slate-500 rounded col-span-2"
+                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
                     ></div>
                     <div
-                      class="h-2 bg-slate-200 dark:bg-slate-500 rounded col-span-1"
+                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
                     ></div>
                   </div>
-                  <div class="h-2 bg-slate-200 dark:bg-slate-500 rounded"></div>
+                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
                 </div>
               </div>
             </div>
@@ -226,29 +226,29 @@
             <div class="animate-pulse flex space-x-4">
               <div class="flex-1 space-y-6 py-1">
                 <div
-                  class="h-8 max-w-lg bg-slate-200 dark:bg-slate-500 rounded"
+                  class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"
                 ></div>
                 <div class="space-y-3">
                   <div class="grid grid-cols-3 gap-4">
                     <div
-                      class="h-2 bg-slate-200 dark:bg-slate-500 rounded col-span-2"
+                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
                     ></div>
                     <div
-                      class="h-2 bg-slate-200 dark:bg-slate-500 rounded col-span-1"
+                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
                     ></div>
                   </div>
-                  <div class="h-2 bg-slate-200 dark:bg-slate-500 rounded"></div>
+                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
                 </div>
                 <div class="space-y-3">
                   <div class="grid grid-cols-3 gap-4">
                     <div
-                      class="h-2 bg-slate-200 dark:bg-slate-500 rounded col-span-2"
+                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
                     ></div>
                     <div
-                      class="h-2 bg-slate-200 dark:bg-slate-500 rounded col-span-1"
+                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
                     ></div>
                   </div>
-                  <div class="h-2 bg-slate-200 dark:bg-slate-500 rounded"></div>
+                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
                 </div>
               </div>
             </div>
