Revert "style(header nav): shrink font size on mobile so text fits"
This reverts commit baf03dffbb43627524a8bfcbcb10c116dc9d194a.

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         <div
           class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2"
         >
-          <div class="flex gap-4 items-center text-xl sm:text-2xl lg:text-4xl">
+          <div class="flex gap-4 items-center text-2xl lg:text-4xl">
             <i class="ph-fill ph-chat text-4xl" aria-hidden="true"></i>
             <h1
               class="inline-block font-heading font-[375]"
