--- a/src/index.html
+++ b/src/index.html
@@ -325,6 +325,7 @@
         scrollpos = window.scrollY;
 
         if (scrollpos > 10) {
+          header.classList.add("scrolled");
           header.classList.add("bg-white");
           header.classList.add("dark:bg-gray-900");
           header.classList.remove("text-white");
@@ -347,6 +348,7 @@
           //   navcontent.classList.remove("bg-gray-100");
           navcontent.classList.add("bg-white");
         } else {
+          header.classList.remove("scrolled");
           header.classList.remove("bg-white");
           header.classList.remove("dark:bg-gray-900");
           header.classList.add("text-white");
