tweaked breakpoints, fixed text-white bug, grid layout for status

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
     <link href="./css/index.css" rel="stylesheet" />
   </head>
 
-  <body class="text-xl min-w-[320px] bg-white text-black dark:bg-black text-white">
+  <body class="text-xl min-w-[320px] bg-white text-black dark:bg-black dark:text-white">
     <!--Nav-->
 
     <nav id="header" class="border-b-2 border-notify-400 dark:bg-gray-900">
@@ -74,8 +74,8 @@
     </nav>
     <!--Hero-->
     <div class="bg-gray-200 dark:bg-gray-800">
-      <div class="container mx-auto px-gutterHalf py-gutterHalf w-full">
-        <ul role="list" id="component_status_list"></ul>
+      <div class="container mx-auto px-gutterHalf py-doubleGutter w-full">
+        <ul role="list" class="grid md:grid-cols-2 gap-gutterHalf" id="component_status_list"></ul>
       </div>
     </div>
 
