--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
       >
         <div class="flex gap-gutterHalf w-full items-center">
-          <img src="/assets/notify.svg" />
+          <img src="/assets/notify.svg" alt="" />
           <h1 class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
             GC Notify System Status
           </h1>
@@ -65,6 +65,7 @@
           class="bg-gray-100 dark:bg-black border-b-2 border-blue-900 dark:border-blue-200 text-blue-900 dark:text-blue-200 sm:underline sm:dark:bg-transparent sm:bg-transparent sm:border-none size-12 sm:w-auto flex items-center justify-center"
           id="lang-toggle"
           data-testid="lang_button"
+          type="button"
         >
           <span class="text-base sm:hidden" data-i18n="lang_abbr">FR</span
           ><span class="sr-only sm:not-sr-only" data-i18n="lang_button"
@@ -73,101 +74,99 @@
         </button>
       </div>
     </nav>
-    <!--Hero-->
-    <div class="bg-gray-200 dark:bg-gray-800">
-      <div class="container mx-auto px-gutterHalf py-doubleGutter w-full">
-        <ul role="list" class="grid md:grid-cols-2 gap-gutterHalf" id="component_status_list" data-testid="component_status_table"></ul>
-      </div>
-    </div>
 
-
-    <section class="" data-testid="main_section">
-      <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
-        <h2
-          data-i18n="incident_history_title"
-          class="text-5xl font-heading leading-tight text-black dark:text-white"
-        >
-          Incidents and service interruptions
-        </h2>
-
-        <div class="text-center mt-10" id="history-loading">
-          <!-- <i class="text-5xl fa-solid fa-spinner fa-spin place-content-center"></i> -->
-          <div class="p-4 w-full">
-            <div class="animate-pulse flex space-x-4">
-              <div class="flex-1 space-y-6 py-1">
-                <div
-                  class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"
-                ></div>
-                <div class="space-y-3">
-                  <div class="grid grid-cols-3 gap-4">
-                    <div
-                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
-                    ></div>
-                    <div
-                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
-                    ></div>
-                  </div>
-                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
-                </div>
-                <div class="space-y-3">
-                  <div class="grid grid-cols-3 gap-4">
-                    <div
-                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
-                    ></div>
-                    <div
-                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
-                    ></div>
-                  </div>
-                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="p-4 w-full">
-            <div class="animate-pulse flex space-x-4">
-              <div class="flex-1 space-y-6 py-1">
-                <div
-                  class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"
-                ></div>
-                <div class="space-y-3">
-                  <div class="grid grid-cols-3 gap-4">
-                    <div
-                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
-                    ></div>
-                    <div
-                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
-                    ></div>
-                  </div>
-                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
-                </div>
-                <div class="space-y-3">
-                  <div class="grid grid-cols-3 gap-4">
-                    <div
-                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
-                    ></div>
-                    <div
-                      class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
-                    ></div>
-                  </div>
-                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+    <main>
+      <div class="bg-gray-200 dark:bg-gray-800">
+        <div class="container mx-auto px-gutterHalf py-doubleGutter w-full">
+          <ul class="grid md:grid-cols-2 gap-gutterHalf" id="component_status_list" data-testid="component_status_table"></ul>
         </div>
-
-        <div id="history" class="dark:text-white" data-testid="history"></div>
       </div>
-    </section>
+      <section class="" data-testid="main_section" aria-label="system status">
+        <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
+          <h2
+            data-i18n="incident_history_title"
+            class="text-5xl font-heading leading-tight text-black dark:text-white"
+          >
+            Incidents and service interruptions
+          </h2>
+          <div class="text-center mt-10" id="history-loading">
+            <!-- <i class="text-5xl fa-solid fa-spinner fa-spin place-content-center"></i> -->
+            <div class="p-4 w-full">
+              <div class="animate-pulse flex space-x-4">
+                <div class="flex-1 space-y-6 py-1">
+                  <div
+                    class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"
+                  ></div>
+                  <div class="space-y-3">
+                    <div class="grid grid-cols-3 gap-4">
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
+                      ></div>
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
+                      ></div>
+                    </div>
+                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
+                  </div>
+                  <div class="space-y-3">
+                    <div class="grid grid-cols-3 gap-4">
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
+                      ></div>
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
+                      ></div>
+                    </div>
+                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="p-4 w-full">
+              <div class="animate-pulse flex space-x-4">
+                <div class="flex-1 space-y-6 py-1">
+                  <div
+                    class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"
+                  ></div>
+                  <div class="space-y-3">
+                    <div class="grid grid-cols-3 gap-4">
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
+                      ></div>
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
+                      ></div>
+                    </div>
+                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
+                  </div>
+                  <div class="space-y-3">
+                    <div class="grid grid-cols-3 gap-4">
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
+                      ></div>
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
+                      ></div>
+                    </div>
+                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="history" class="dark:text-white" data-testid="history"></div>
+        </div>
+      </section>
+      <section class="bg-blue-900" aria-label="footer">
+        <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
+          <a href="https://notification.canada.ca" class="text-blue-200"
+            ><i class="text-2xl ph-arrow-left mr-4"></i>
+            <span data-i18n="back_button">Go to GC Notify</span>
+          </a>
+        </div>
+      </section>
+    </main>
 
-    <section class="bg-blue-900">
-      <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
-        <a href="https://notification.canada.ca" class="text-blue-200"
-          ><i class="text-2xl ph-arrow-left mr-4"></i>
-          <span data-i18n="back_button">Go to GC Notify</span>
-        </a>
-      </div>
-    </section>
 
     <script src="./js/articles.js"></script>
     <!-- exposes `LoadIncidentHistory()` -->
@@ -175,7 +174,7 @@
     <!-- exposes `LoadComponentStatus()` -->
     <script src="./js/i18n.js"></script>
     <!-- exposes `SwitchLanguage()` and `LoadTranslations()` -->
-    <script type="text/javascript">
+    <script>
       /**
        * Setup language switching and load incident history when the language changes
        */
