--- a/src/index.html
+++ b/src/index.html
@@ -1,173 +1,219 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>GC Notify - System Status</title>
+    <meta name="description" content="GC Notify system status" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>GC Notify - System Status</title>
-  <meta name="description" content="GC Notify system status" />
-  <meta name="keywords" content="" />
-  <meta name="author" content="" />
+    <!--Icons-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/fill/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/regular/style.css"
+    />
 
-  <!--Icons-->
-  <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/fill/style.css" />
-  <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/regular/style.css" />
+    <!--Replace with your tailwind.css once created-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300..500&family=Noto+Sans+Mono&family=Noto+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
-  <!--Replace with your tailwind.css once created-->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300..500&family=Noto+Sans+Mono&family=Noto+Sans:wght@400;600&display=swap"
-    rel="stylesheet" />
+    <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
+    <style>
+      .gradient {
+        background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+      }
 
-  <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
-  <style>
-    .gradient {
-      background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
-    }
-
-    .dark .gradient,
-    .dark.gradient {
-      background: linear-gradient(90deg,
+      .dark .gradient,
+      .dark.gradient {
+        background: linear-gradient(
+          90deg,
           hsla(205, 46%, 10%, 1) 0%,
           hsla(191, 28%, 23%, 1) 50%,
-          hsla(207, 41%, 27%, 1) 100%);
-    }
-  </style>
-  <link href="./css/index.css" rel="stylesheet" />
-</head>
+          hsla(207, 41%, 27%, 1) 100%
+        );
+      }
+    </style>
+    <link href="./css/index.css" rel="stylesheet" />
+  </head>
 
-<body class="text-xl min-w-[320px] bg-white text-black dark:bg-black dark:text-white">
-  <!--Nav-->
-  <nav id="header" class="bg-white">
-    <div class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between">
-      <div class="flex gap-gutterHalf w-full items-center">
-        <img src="/assets/fip-en.svg" alt="" />
-      </div>
-
-      <button
-        class="bg-gray-100  border-b-2 border-blue-900  text-blue-900  sm:underline sm sm:bg-transparent sm:border-none size-12 sm:w-auto flex items-center justify-center"
-        id="lang-toggle" data-testid="lang_button" type="button">
-        <span class="text-base sm:hidden" data-i18n="lang_abbr">FR</span><span class="sr-only sm:not-sr-only"
-          data-i18n="lang_button">Français</span>
-      </button>
-    </div>
-  </nav>
-  <header class="bg-gray-100 dark:bg-gray-900">
-    <div class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between">
-      <div class="flex gap-gutterHalf w-full items-center">
-        <img src="/assets/notify.svg" alt="" />
-        <h1 class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
-          GC Notify System Status
-        </h1>
-      </div>
-    </div>
-  </header>
-
-  <main>
-    <div class="bg-gray-200 dark:bg-gray-800">
-      <div class="container mx-auto px-gutterHalf py-doubleGutter w-full">
-        <ul class="grid md:grid-cols-2 gap-gutterHalf" id="component_status_list" data-testid="component_status_table">
-        </ul>
-      </div>
-    </div>
-    <section class="" data-testid="main_section" aria-label="system status">
-      <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
-        <h2 data-i18n="incident_history_title" class="text-5xl font-heading leading-tight text-black dark:text-white">
-          Incidents and service interruptions
-        </h2>
-        <div class="text-center mt-10" id="history-loading">
-          <!-- <i class="text-5xl fa-solid fa-spinner fa-spin place-content-center"></i> -->
-          <div class="p-4 w-full">
-            <div class="animate-pulse flex space-x-4">
-              <div class="flex-1 space-y-6 py-1">
-                <div class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"></div>
-                <div class="space-y-3">
-                  <div class="grid grid-cols-3 gap-4">
-                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"></div>
-                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"></div>
-                  </div>
-                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
-                </div>
-                <div class="space-y-3">
-                  <div class="grid grid-cols-3 gap-4">
-                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"></div>
-                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"></div>
-                  </div>
-                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="p-4 w-full">
-            <div class="animate-pulse flex space-x-4">
-              <div class="flex-1 space-y-6 py-1">
-                <div class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"></div>
-                <div class="space-y-3">
-                  <div class="grid grid-cols-3 gap-4">
-                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"></div>
-                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"></div>
-                  </div>
-                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
-                </div>
-                <div class="space-y-3">
-                  <div class="grid grid-cols-3 gap-4">
-                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"></div>
-                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"></div>
-                  </div>
-                  <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+  <body
+    class="text-xl min-w-[320px] bg-white text-black dark:bg-black dark:text-white"
+  >
+    <!--Nav-->
+    <nav id="header" class="bg-white">
+      <div
+        class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
+      >
+        <div class="flex gap-gutterHalf w-full items-center">
+          <img src="/assets/fip-en.svg" alt="" />
         </div>
-        <div id="history" class="dark:text-white" data-testid="history"></div>
+
+        <button
+          class="bg-gray-100 border-b-2 border-blue-900 text-blue-900 sm:underline sm sm:bg-transparent sm:border-none size-12 sm:w-auto flex items-center justify-center"
+          id="lang-toggle"
+          data-testid="lang_button"
+          type="button"
+        >
+          <span class="text-base sm:hidden" data-i18n="lang_abbr">FR</span
+          ><span class="sr-only sm:not-sr-only" data-i18n="lang_button"
+            >Français</span
+          >
+        </button>
       </div>
-    </section>
-    <section class="bg-blue-900" aria-label="footer">
-      <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
-        <a href="https://notification.canada.ca" class="text-blue-200"><i class="text-2xl ph-arrow-left mr-4"></i>
-          <span data-i18n="back_button">Go to GC Notify</span>
-        </a>
+    </nav>
+    <header class="bg-gray-100 dark:bg-gray-900">
+      <div
+        class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
+      >
+        <div class="flex gap-gutterHalf w-full items-center">
+          <img src="/assets/notify.svg" alt="" />
+          <h1 class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
+            GC Notify System Status
+          </h1>
+        </div>
       </div>
-    </section>
-  </main>
+    </header>
 
+    <main>
+      <div class="bg-gray-200 dark:bg-gray-800">
+        <div class="container mx-auto px-gutterHalf py-doubleGutter w-full">
+          <ul
+            class="grid md:grid-cols-2 gap-gutterHalf"
+            id="component_status_list"
+            data-testid="component_status_table"
+          ></ul>
+        </div>
+      </div>
+      <section class="" data-testid="main_section" aria-label="system status">
+        <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
+          <h2
+            data-i18n="incident_history_title"
+            class="text-5xl font-heading leading-tight text-black dark:text-white"
+          >
+            Incidents and service interruptions
+          </h2>
+          <div class="text-center mt-10" id="history-loading">
+            <!-- <i class="text-5xl fa-solid fa-spinner fa-spin place-content-center"></i> -->
+            <div class="p-4 w-full">
+              <div class="animate-pulse flex space-x-4">
+                <div class="flex-1 space-y-6 py-1">
+                  <div
+                    class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"
+                  ></div>
+                  <div class="space-y-3">
+                    <div class="grid grid-cols-3 gap-4">
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
+                      ></div>
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
+                      ></div>
+                    </div>
+                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
+                  </div>
+                  <div class="space-y-3">
+                    <div class="grid grid-cols-3 gap-4">
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
+                      ></div>
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
+                      ></div>
+                    </div>
+                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="p-4 w-full">
+              <div class="animate-pulse flex space-x-4">
+                <div class="flex-1 space-y-6 py-1">
+                  <div
+                    class="h-8 max-w-lg bg-gray-200 dark:bg-gray-500 rounded"
+                  ></div>
+                  <div class="space-y-3">
+                    <div class="grid grid-cols-3 gap-4">
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
+                      ></div>
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
+                      ></div>
+                    </div>
+                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
+                  </div>
+                  <div class="space-y-3">
+                    <div class="grid grid-cols-3 gap-4">
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-2"
+                      ></div>
+                      <div
+                        class="h-2 bg-gray-200 dark:bg-gray-500 rounded col-span-1"
+                      ></div>
+                    </div>
+                    <div class="h-2 bg-gray-200 dark:bg-gray-500 rounded"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="history" class="dark:text-white" data-testid="history"></div>
+        </div>
+      </section>
+      <section class="bg-blue-900" aria-label="footer">
+        <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
+          <a href="https://notification.canada.ca" class="text-blue-200"
+            ><i class="text-2xl ph-arrow-left mr-4"></i>
+            <span data-i18n="back_button">Go to GC Notify</span>
+          </a>
+        </div>
+      </section>
+    </main>
 
-  <script src="./js/articles.js"></script>
-  <!-- exposes `LoadIncidentHistory()` -->
-  <script src="./js/component_status.js"></script>
-  <!-- exposes `LoadComponentStatus()` -->
-  <script src="./js/i18n.js"></script>
-  <!-- exposes `SwitchLanguage()` and `LoadTranslations()` -->
-  <script>
-    /**
-     * Setup language switching and load incident history when the language changes
-     */
-    SwitchLanguage({
-      buttonId: "lang-toggle",
-      onComplete: function () {
-        LoadIncidentHistory({
-          lang: document.documentElement.lang,
-          loaderId: "history-loading",
-          contentId: "history",
-        });
-      },
-    });
+    <script src="./js/articles.js"></script>
+    <!-- exposes `LoadIncidentHistory()` -->
+    <script src="./js/component_status.js"></script>
+    <!-- exposes `LoadComponentStatus()` -->
+    <script src="./js/i18n.js"></script>
+    <!-- exposes `SwitchLanguage()` and `LoadTranslations()` -->
+    <script>
+      /**
+       * Setup language switching and load incident history when the language changes
+       */
+      SwitchLanguage({
+        buttonId: "lang-toggle",
+        onComplete: function () {
+          LoadIncidentHistory({
+            lang: document.documentElement.lang,
+            loaderId: "history-loading",
+            contentId: "history",
+          });
+        },
+      });
 
-    /**
-     * Load component status after a short delay
-     */
-    window.setTimeout(() => {
-      // Load the component status now
-      LoadComponentStatus(LoadTranslations);
-
-      // Load the component status again every 5 minutes
-      window.setInterval(() => {
+      /**
+       * Load component status after a short delay
+       */
+      window.setTimeout(() => {
+        // Load the component status now
         LoadComponentStatus(LoadTranslations);
-      }, 300000); // 5 minutes
-    }, 1500);
-  </script>
-</body>
 
+        // Load the component status again every 5 minutes
+        window.setInterval(() => {
+          LoadComponentStatus(LoadTranslations);
+        }, 300000); // 5 minutes
+      }, 1500);
+    </script>
+  </body>
 </html>
