--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     <!--Nav-->
     <nav id="header" class="bg-white">
       <div
-        class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
+        class="container mx-auto px-gutterHalf py-gutterHalf flex gap-gutter w-full justify-between"
       >
         <div class="flex gap-gutterHalf w-full items-center">
           <img src="/assets/fip-en.svg" alt="" />
