fix i18n and responsive layout

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <button
-          class="bg-gray-100 border-b-2 border-blue-900 text-blue-900 sm:underline sm sm:bg-transparent sm:border-none size-12 sm:w-auto flex items-center justify-center"
+          class="bg-gray-100 border-b-2 border-blue-900 text-blue-900 sm:underline sm sm:bg-transparent sm:border-none size-12 sm:w-auto shrink-0 flex items-center justify-center"
           id="lang-toggle"
           data-testid="lang_button"
           type="button"
@@ -76,8 +76,8 @@
       <div
         class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
       >
-        <div class="flex gap-gutterHalf w-full items-center">
-          <img src="/assets/notify.svg" alt="" />
+        <div class="flex gap-gutterHalf w-full items-start">
+          <img class="size-7" src="/assets/notify.svg" alt="" />
           <h1 class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
             GC Notify System Status
           </h1>
