--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,11 @@
           <div id="history" class="dark:text-white" data-testid="history"></div>
         </div>
       </section>
-      <section class="bg-blue-900">
+      <section
+        class="bg-blue-900"
+        aria-label="Go to GC Notify"
+        data-i18n="back_button"
+      >
         <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
           <a
             href="https://notification.canada.ca"
@@ -186,89 +190,95 @@
         </div>
       </section>
     </main>
-    <footer class="bg-gray-100">
+    <footer
+      class="bg-gray-100"
+      aria-label="Go to GC Notify"
+      data-i18n="back_button"
+    >
       <div
         class="container mx-auto px-gutterHalf py-gutterAndAHalf flex gap-gutter items-end lg:items-center justify-between"
       >
-        <ul
-          class="text-base leading-8 [&_a]:text-black [&_svg]:hidden md:[&_svg]:inline md:[&_svg]:mx-gutterHalf flex flex-col md:flex-row flex-wrap gap-gutterHalf md:gap-0 md:items-center"
-        >
-          <li class="lg:list-none">
-            <a
-              href="https://notification.canada.ca/privacy"
-              data-i18n="privacy privacy_href"
-              >Privacy</a
-            >
-            <svg
-              width="4"
-              height="4"
-              viewBox="0 0 4 4"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="2" cy="2" r="2" fill="black" />
-            </svg>
-          </li>
+        <nav aria-label="Legal information" data-i18n="legal_label">
+          <ul
+            class="text-base leading-8 [&_a]:text-black [&_svg]:hidden md:[&_svg]:inline md:[&_svg]:mx-gutterHalf flex flex-col md:flex-row flex-wrap gap-gutterHalf md:gap-0 md:items-center"
+          >
+            <li class="lg:list-none">
+              <a
+                href="https://notification.canada.ca/privacy"
+                data-i18n="privacy privacy_href"
+                >Privacy</a
+              >
+              <svg
+                width="4"
+                height="4"
+                viewBox="0 0 4 4"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="2" cy="2" r="2" fill="black" />
+              </svg>
+            </li>
 
-          <li>
-            <a
-              href="https://notification.canada.ca/security"
-              data-i18n="security security_href"
-              >Security</a
-            >
-            <svg
-              width="4"
-              height="4"
-              viewBox="0 0 4 4"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="2" cy="2" r="2" fill="black" />
-            </svg>
-          </li>
+            <li>
+              <a
+                href="https://notification.canada.ca/security"
+                data-i18n="security security_href"
+                >Security</a
+              >
+              <svg
+                width="4"
+                height="4"
+                viewBox="0 0 4 4"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="2" cy="2" r="2" fill="black" />
+              </svg>
+            </li>
 
-          <li>
-            <a
-              href="https://notification.canada.ca/accessibility"
-              data-i18n="a11y a11y_href"
-              >Accessibility</a
-            >
-            <svg
-              width="4"
-              height="4"
-              viewBox="0 0 4 4"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="2" cy="2" r="2" fill="black" />
-            </svg>
-          </li>
+            <li>
+              <a
+                href="https://notification.canada.ca/accessibility"
+                data-i18n="a11y a11y_href"
+                >Accessibility</a
+              >
+              <svg
+                width="4"
+                height="4"
+                viewBox="0 0 4 4"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="2" cy="2" r="2" fill="black" />
+              </svg>
+            </li>
 
-          <li>
-            <a
-              href="https://notification.canada.ca/terms"
-              data-i18n="terms terms_href"
-              >Terms of use</a
-            >
-            <svg
-              width="4"
-              height="4"
-              viewBox="0 0 4 4"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="2" cy="2" r="2" fill="black" />
-            </svg>
-          </li>
+            <li>
+              <a
+                href="https://notification.canada.ca/terms"
+                data-i18n="terms terms_href"
+                >Terms of use</a
+              >
+              <svg
+                width="4"
+                height="4"
+                viewBox="0 0 4 4"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="2" cy="2" r="2" fill="black" />
+              </svg>
+            </li>
 
-          <li>
-            <a
-              href="https://notification.canada.ca/service-level-agreement"
-              data-i18n="sla sla_href"
-              >Service level agreement</a
-            >
-          </li>
-        </ul>
+            <li>
+              <a
+                href="https://notification.canada.ca/service-level-agreement"
+                data-i18n="sla sla_href"
+                >Service level agreement</a
+              >
+            </li>
+          </ul>
+        </nav>
         <img
           src="/assets/fip-wordmark.svg"
           alt="Symbol of the Government of Canada"
