remove some attributes

--- a/src/index.html
+++ b/src/index.html
@@ -175,11 +175,7 @@
           <div id="history" class="dark:text-white" data-testid="history"></div>
         </div>
       </section>
-      <section
-        class="bg-blue-900"
-        aria-label="Go to GC Notify"
-        data-i18n="back_button"
-      >
+      <section class="bg-blue-900" aria-label="Go to GC Notify">
         <div class="container mx-auto px-gutterHalf py-gutterAndAHalf">
           <a
             href="https://notification.canada.ca"
@@ -190,11 +186,7 @@
         </div>
       </section>
     </main>
-    <footer
-      class="bg-gray-100"
-      aria-label="Go to GC Notify"
-      data-i18n="back_button"
-    >
+    <footer class="bg-gray-100">
       <div
         class="container mx-auto px-gutterHalf py-gutterAndAHalf flex gap-gutter items-end lg:items-center justify-between"
       >
