--- a/src/index.html
+++ b/src/index.html
@@ -76,13 +76,13 @@
         </button>
       </div>
     </nav>
-    <header class="bg-gray-100 dark:bg-gray-900">
+    <header class="bg-gray-100 dark:bg-gray-900" aria-labelledby="site-title">
       <div
         class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
       >
         <div class="flex gap-gutterHalf w-full items-start">
           <img class="size-7" src="/assets/notify.svg" alt="" />
-          <h1 class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
+          <h1 id="site-title" class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
             GC Notify System Status
           </h1>
         </div>
