--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     class="text-xl min-w-[320px] bg-white text-black dark:bg-black dark:text-white"
   >
     <!--Nav-->
-    <nav id="header" class="bg-white">
+    <nav id="header" class="bg-white" aria-labelledby="site-title">
       <div
         class="container mx-auto px-gutterHalf py-gutterHalf flex gap-gutter w-full justify-between"
       >
