--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         </button>
       </div>
     </nav>
-    <header class="bg-gray-100 dark:bg-gray-900" aria-labelledby="site-title">
+    <div class="bg-gray-100 dark:bg-gray-900" aria-labelledby="site-title">
       <div
         class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
       >
@@ -87,7 +87,7 @@
           </h1>
         </div>
       </div>
-    </header>
+    </div>
 
     <main>
       <div class="bg-gray-200 dark:bg-gray-800">
