--- a/src/index.html
+++ b/src/index.html
@@ -76,20 +76,19 @@
         </button>
       </div>
     </nav>
-    <div class="bg-gray-100 dark:bg-gray-900" aria-labelledby="site-title">
-      <div
-        class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
-      >
-        <div class="flex gap-gutterHalf w-full items-start">
-          <img class="size-7" src="/assets/notify.svg" alt="" />
-          <h1 id="site-title" class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
-            GC Notify System Status
-          </h1>
+    <main>
+      <div class="bg-gray-100 dark:bg-gray-900">
+        <div
+          class="container mx-auto px-gutterHalf py-gutterHalf flex w-full justify-between"
+        >
+          <div class="flex gap-gutterHalf w-full items-start">
+            <img class="size-7" src="/assets/notify.svg" alt="" />
+            <h1 id="site-title" class="text-xl/7 font-heading font-[375]" data-i18n="site_title">
+              GC Notify System Status
+            </h1>
+          </div>
         </div>
       </div>
-    </div>
-
-    <main>
       <div class="bg-gray-200 dark:bg-gray-800">
         <div class="container mx-auto px-gutterHalf py-doubleGutter w-full">
           <ul
